--- a/sae2.3/sae_reseau/sae_reseau/sae_reseau.csproj
+++ b/sae2.3/sae_reseau/sae_reseau/sae_reseau.csproj
@@ -82,5 +82,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\CLassLibrairieBDD\CLassLibrairieBDD\CLassLibrairieBDD.csproj">
+      <Project>{b66cd518-89b4-46a9-a306-6dd14f8139b8}</Project>
+      <Name>CLassLibrairieBDD</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
